cabal-version:       2.4
name:                advent
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <scott.sedgwick@gmail.com>
copyright:           2021 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base
                     , array
                     , clock
                     , containers
                     , data-default
                     , deepseq
                     , lens
                     , linear
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , search-algorithms
                     , split
                     , vector
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
                     , Day07
                     , Day08
                     , Day09
                     , Day10
                     , Day11
                     , Day12
                     , Day13
                     , Day14
                     , Day15
                     , Day16
                     , Day17
                     , Day18
                     , Day19
                     , Day20
                     , Day21
                     , Day22
                     , Day23
                     , Day24
                     , Day25
                     , Trees
                     , Utils
                     , ParseUtils

executable advent-01
  import:              common-options
  hs-source-dirs:      app/day01
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-02
  import:              common-options
  hs-source-dirs:      app/day02
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-03
  import:              common-options
  hs-source-dirs:      app/day03
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-04
  import:              common-options
  hs-source-dirs:      app/day04
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-05
  import:              common-options
  hs-source-dirs:      app/day05
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-06
  import:              common-options
  hs-source-dirs:      app/day06
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-07
  import:              common-options
  hs-source-dirs:      app/day07
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-08
  import:              common-options
  hs-source-dirs:      app/day08
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-09
  import:              common-options
  hs-source-dirs:      app/day09
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-10
  import:              common-options
  hs-source-dirs:      app/day10
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-11
  import:              common-options
  hs-source-dirs:      app/day11
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-12
  import:              common-options
  hs-source-dirs:      app/day12
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-13
  import:              common-options
  hs-source-dirs:      app/day13
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-14
  import:              common-options
  hs-source-dirs:      app/day14
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-15
  import:              common-options
  hs-source-dirs:      app/day15
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-16
  import:              common-options
  hs-source-dirs:      app/day16
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-17
  import:              common-options
  hs-source-dirs:      app/day17
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-18
  import:              common-options
  hs-source-dirs:      app/day18
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-19
  import:              common-options
  hs-source-dirs:      app/day19
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-20
  import:              common-options
  hs-source-dirs:      app/day20
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-21
  import:              common-options
  hs-source-dirs:      app/day21
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-22
  import:              common-options
  hs-source-dirs:      app/day22
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-23
  import:              common-options
  hs-source-dirs:      app/day23
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-24
  import:              common-options
  hs-source-dirs:      app/day24
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable advent-25
  import:              common-options
  hs-source-dirs:      app/day25
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
